<resources>
    <string name="app_name">StudyPal</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">Home</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="password_confirm_failed">"Passwords do not match"</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">E-mail</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="birth_date">Birth Date</string>
    <string name="user_name">User Name</string>
    <string name="profile">Profile</string>
    <string name="social">Social</string>
    <string name="settings">Settings</string>
    <string name="stream_button_name">STREAM</string>
    <string name="sign_out">Sign Out</string>
    <string name="search_hint">Search a user</string>
    <string name="search">SEARCH</string>
    <string name="start_session">Start Session</string>
    <string name="break_text">In Break</string>
    <string name="session_text">In Session</string>
    <string name="timer_text">%d:%d</string>
    <string name="solo_session">Solo Session</string>
    <string name="minutes_in_break">Break length in minutes</string>
    <string name="minutes_in_session">Study session length in minutes</string>
    <string name="okay">Okay!</string>
    <string name="you_have_studied_for_minutes_congratulations">You have studied for ... minutes. Congratulations.</string>
    <string name="one_to_one_session">One to One Session</string>
    <string name="default_break_minutes">5</string>
    <string name="default_study_session_minutes">25</string>
    <string name="background_music">Background music</string>
    <string name="number_of_sessions">Number of Sessions</string>
    <string name="number_of_sessions_number">3</string>
</resources>
