<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SignUpFragment">

    <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintStart_toStartOf="@+id/userName"
            app:layout_constraintEnd_toEndOf="@+id/userName"
            app:layout_constraintTop_toBottomOf="@+id/userName" android:layout_marginTop="24dp"
            android:autofillHints=""/>
    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"

            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintHorizontal_bias="0.51" android:autofillHints=""/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/repeatPassword"
            app:layout_constraintEnd_toEndOf="@+id/password" app:layout_constraintStart_toStartOf="@+id/password"
            android:hint="@string/repeat_password"
            android:autofillHints=""
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/password"
            />

    <Button
            android:id="@+id/register_button"
            android:layout_width="122dp"
            android:layout_height="46dp"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            android:enabled="true"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
            app:layout_constraintVertical_bias="0.113" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/birthDate" app:layout_constraintEnd_toEndOf="@+id/repeatPassword"
            app:layout_constraintStart_toStartOf="@+id/repeatPassword"
            app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/birth_date" android:autofillHints=""
            android:focusable="false"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/repeatPassword"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userName"
            android:hint="@string/user_name"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:autofillHints=""/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneNumber"
            app:layout_constraintEnd_toEndOf="@+id/birthDate"
            app:layout_constraintStart_toStartOf="@+id/birthDate" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@android:string/emptyPhoneNumber" android:autofillHints=""
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/birthDate"/>

</androidx.constraintlayout.widget.ConstraintLayout>